--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -15,5 +15,5 @@
   <%= @todo.user %>
 </p>
 
-<%= link_to 'Edit', edit_todo_path(@todo) %> |
+<%= link_to 'Edit', edit_user_todo_path(@todo) %> |
 <%= link_to 'Back', todos_path %>
