--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -16,4 +16,4 @@
 </p>
 
 <%= link_to 'Edit', edit_user_todo_path(@todo) %> |
-<%= link_to 'Back', todos_path %>
+<%= link_to 'Back', user_todos_path %>
