--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,24 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Users</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New User', new_user_path %>
+<% @users.each do |user| %>
+  <div class="row">
+    <div class="col s12 m6">
+      <div class="card sticky-action blue-grey darken-1">
+        <div class="card-title card-content white-text">
+          <strong><%= user.name.capitalize %>'s</strong>
+          Todos: <%= user.todos.count %>
+        </div>
+        <div class="card-action">
+          <a href="#">Calender</a>
+          <%= link_to 'List', user_todos_path(user) %>
+          <%= link_to 'Edit', edit_user_path(user) %>
+        </div>
+        <div class="card-reveal">...</div>
+      </div>
+    </div>
+  </div>
+<% end %>
+<div class="row">
+  <div class="col s12 m6">
+    <%= link_to 'New User', new_user_path, class: "waves-effect waves-light btn-large" %>
+  </div>
+</div>
