more stuff done with users

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
     <div class="col s12 m6">
       <div class="card sticky-action blue-grey darken-1">
         <div class="card-title card-content white-text">
-          <strong><%= user.name.capitalize %>'s</strong>
+          <strong><%= user.name %>'s</strong>
           Todos: <%= user.todos.count %>
         </div>
         <div class="card-action">
